--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8.4.35",
+    "postcss-preset-env": "^9.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
